fixes: moderation included w/ surf + ui alignment

--- a/component/Homepage.styl
+++ b/component/Homepage.styl
@@ -5,12 +5,13 @@
     margin 17px 0 17px 5px
     padding-bottom 15px
     text-transform capitalize
+    float left
   .moderation-log
-    position absolute
-    top 0
-    right -23px
+    float right
     font-weight 300
     padding 2px 9px
+    margin-bottom 8px
+    margin-top 30px
     a
       color #777
       b
