--- a/component/MenuSummary.styl
+++ b/component/MenuSummary.styl
@@ -1,4 +1,5 @@
 .MenuSummary
+  clear both
   .container
     padding 7px 20px 20px 20px
     margin grid -25px (grid*5) 0
